Fix: Car button animation overflow fix, it wont jump into a new line, media query changed

--- a/src/main/webapp/static/css/header_style.css
+++ b/src/main/webapp/static/css/header_style.css
@@ -169,7 +169,7 @@ header {
   }
 }
 
-@media only screen and (max-width: 1105px) {
+@media only screen and (max-width: 1200px) {
   .nav {
     flex-direction: column;
   }
